Added a tweak which will prevent warnings being emitted from the java.util.prefs subsystem.  These can be common as a result of a bug in the J2SE1.4 JVM.

--- a/util/src/etc/logging.properties
+++ b/util/src/etc/logging.properties
@@ -11,5 +11,11 @@ handlers = java.util.logging.ConsoleHandler
 # Set the default level for all logging.
 .level = INFO
 
+# There is a JVM1.4 bug (4838770) which can cause annoying WARNING-level
+# messages from the preferences subsystem if the system global prefs file
+# can't be locked (which is not uncommon) - so ignore all messages from
+# that subsystem.
+java.util.prefs.level = SEVERE
+
 # Set the default level for logging from Starlink loggers.
 uk.ac.starlink.level = WARNING
