--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -579,6 +579,7 @@
          <j2se version="1.4+"/>
          <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
          <extension name="UTIL" href="util.jnlp"/>
+         <extension name="HELP" href="help.jnlp"/>
          <extension name="TABLE-PARTS" href="table-parts.jnlp"/>
          <extension name="MIRAGE" href="mirage.jnlp"/>
        </resources>
