modifications for Mac OS X

--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -415,6 +415,9 @@
     <antcall target="unpack_jni_arch">
       <param name="unpack.arch" value="x86"/>
     </antcall>
+    <antcall target="unpack_jni_arch">
+      <param name="unpack.arch" value="ppc"/>
+    </antcall>
   </target>
 
   <!-- Architecture-specific JNI jar file unpacker -->
@@ -678,6 +681,19 @@
           failonerror="yes">
       <env key="SYSTEM" value="sun4_Solaris"/>
       <env key="JAVA_SYSTEM" value="solaris"/>
+      <env key="STARLINK" value="${stardev}"/>
+      <env key="ADDLIBS" value="-L${stardev.add}/lib"/>
+      <env key="ADDINCS" value="-I${stardev.add}/include"/>
+      <env key="JDK" value="${jdk}"/>
+      <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
+      <env key="TARGET_LIB" value="${build.lib.arch}"/>
+      <arg line="${mk.action}"/>
+    </exec>
+
+    <exec dir="${build.jni}" executable="${build.jni}/mk" os="Mac OS X"
+          failonerror="yes">
+      <env key="SYSTEM" value="ppc_MacOSX"/>
+      <env key="JAVA_SYSTEM" value="ppc"/>
       <env key="STARLINK" value="${stardev}"/>
       <env key="ADDLIBS" value="-L${stardev.add}/lib"/>
       <env key="ADDINCS" value="-I${stardev.add}/include"/>
