--- a/splat/build.xml
+++ b/splat/build.xml
@@ -620,7 +620,7 @@
          <extension name="PAL" href="pal.jnlp"/>
          <extension name="DIVA" href="diva.jnlp"/>
          <extension name="HELP" href="help.jnlp"/>
-         <extension name="TABLE" href="table.jnlp"/>
+         <extension name="TABLE-PARTS" href="table-parts.jnlp"/>
        </resources>
        <component_desc/>
      </jnlp>
