--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -1158,6 +1158,7 @@
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
       <sysproperty key="java.library.path" value="${tests-libpath}"/>
+      <sysproperty key="basedir" value="${basedir}"/>
 
       <formatter type="brief" usefile="false"/>
 
@@ -1186,6 +1187,7 @@
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
       <sysproperty key="java.library.path" value="${tests-libpath}"/>
+      <sysproperty key="basedir" value="${basedir}"/>
       <classpath refid="tests-classpath"/>
       <jvmarg value="${junit.assertions}"/>
       <formatter type="plain" usefile="false"/>
