DocTest wasn't locating document files properly.

--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -1148,6 +1148,7 @@
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
       <sysproperty key="java.library.path" value="${tests-libpath}"/>
+      <sysproperty key="basedir" value="${basedir}"/>
 
       <formatter type="brief" usefile="false"/>
 
@@ -1176,6 +1177,7 @@
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
       <sysproperty key="java.library.path" value="${tests-libpath}"/>
+      <sysproperty key="basedir" value="${basedir}"/>
       <classpath refid="tests-classpath"/>
       <jvmarg value="${junit.assertions}"/>
       <formatter type="plain" usefile="false"/>
