Changed sign_ant to not propagate parameters. Some directories in ANT do not seem to honour basedir (was looking for docs in local directory not in ./ant directory).

--- a/build.xml
+++ b/build.xml
@@ -633,7 +633,7 @@
    !-->
   <target name="sign_ant">
 
-    <ant dir="./ant" target="sign_jars"/>
+    <ant dir="./ant" inheritAll="false" target="sign_jars"/>
 
   </target>
 
