--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -633,7 +633,8 @@
     <!-- Copy extra documentation, note doesn't include javadocs these
      !   are generated from the source-->
     <copy todir="${dist.docs.pkg}">
-      <fileset dir="${build.docs}" includes="images/* figures/* ${user.doc}/*"/>
+      <fileset dir="${build.docs}"
+               includes="images/* figures/* ${user.doc}/* *.pdf"/>
     </copy>
 
     <!-- Set permissions on contents of distribution directories -->
@@ -1040,6 +1041,22 @@
     <copy todir="${build.classes}/uk/ac/starlink/topcat/help">
       <fileset dir="${build.docs}/${user.doc}" includes="${user.doc}.html"/>
     </copy>
+
+    <xslt in="${build.docs}/${user.doc}.xml"
+          out="${build.docs}/${user.doc}.fo"
+          style="${src.docs}/toFo.xslt">
+      <param name="VERSION" expression="${version}"/>
+      <param name="BASEDIR" expression="${build.docs}/${user.doc}"/>
+    </xslt>
+    <java classname="org.apache.fop.apps.Fop"
+          failonerror="yes"
+          fork="yes">
+      <classpath>
+        <fileset dir="${src.docs}" includes="*.jar"/>
+      </classpath>
+      <arg value="-fo"/> <arg value="${build.docs}/${user.doc}.fo"/>
+      <arg value="-pdf"/> <arg value="${build.docs}/${user.doc}.pdf"/>
+    </java>
 
     <java classpathref="classpath"
           dir="${src.docs}"
