Modified so that ant build/test targets can operate in a headless environment.

--- a/array/build.xml
+++ b/array/build.xml
@@ -901,6 +901,7 @@
       <sysproperty key="build.tests" value="${build.tests}"/>
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
+      <sysproperty key="java.awt.headless" value="${java.awt.headless}"/>
 
       <formatter type="plain" usefile="false"/>
 
@@ -927,6 +928,7 @@
       <sysproperty key="build.tests" value="${build.tests}"/>
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
+      <sysproperty key="java.awt.headless" value="${java.awt.headless}"/>
       <classpath refid="tests-classpath"/>
       <jvmarg value="${junit.assertions}"/>
       <formatter type="plain" usefile="false"/>
