--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -1245,6 +1245,7 @@
       <sysproperty key="uk.ac.starlink.treeview.test.args"
                    value="${treeview.args}"/>
       <sysproperty key="java.library.path" value="${tests-libpath}"/>
+      <sysproperty key="java.awt.headless" value="${java.awt.headless}"/>
 
       <formatter type="brief" usefile="false"/>
 
@@ -1275,6 +1276,7 @@
       <sysproperty key="uk.ac.starlink.treeview.test.args"
                    value="${treeview.args}"/>
       <sysproperty key="java.library.path" value="${tests-libpath}"/>
+      <sysproperty key="java.awt.headless" value="${java.awt.headless}"/>
       <classpath refid="tests-classpath"/>
       <jvmarg value="${junit.assertions}"/>
       <formatter type="plain" usefile="false"/>
