--- a/hdx/build.xml
+++ b/hdx/build.xml
@@ -966,6 +966,7 @@
       <sysproperty key="Hdx.properties"
                    value="${tests.etc.dir}/Hdx.properties"/>
       <sysproperty key="java.library.path" value="${tests-libpath}"/>
+      <sysproperty key="java.awt.headless" value="${java.awt.headless}"/>
 
       <!--formatter type="brief" usefile="true"/-->
       <formatter type="brief" usefile="false"/>
@@ -996,6 +997,7 @@
       <sysproperty key="tests-classpath.value" 
                    value="${tests-classpath.value}"/>
       <sysproperty key="java.library.path" value="${tests-libpath}"/>
+      <sysproperty key="java.awt.headless" value="${java.awt.headless}"/>
       <classpath refid="tests-classpath"/>
       <formatter type="plain" usefile="false"/>
       <test name="${testcase}"/>
