--- a/hds/build.xml
+++ b/hds/build.xml
@@ -96,6 +96,7 @@
   <property name="debug" value="true"/>
   <property name="deprecation" value="false"/>
   <property name="optimize" value="true"/>
+  <property name="source.version" value="1.4"/>
 
   <!-- Extra task options, if any -->
   <property name="chmod.fail" value="false"/>
@@ -349,6 +350,7 @@
            destdir="${build.classes}"
            debug="${debug}"
            deprecation="${deprecation}"
+           source="${source.version}"
            optimize="${optimize}">
 
       <classpath refid="classpath"/>
@@ -767,6 +769,7 @@
              author="true"
              version="true"
              locale="en"
+             source="${source.version}"
              windowtitle="${Name} API"
              doctitle="${Name}"
              classpathref="classpath">
@@ -855,6 +858,7 @@
     <javac srcdir="${tests.dir}"
            destdir="${build.tests}"
            debug="${debug}"
+           source="${source.version}"
            deprecation="${deprecation}" >
       <classpath refid="tests-classpath"/>
     </javac>
