Some reflection tasks seem to require that optional.jar is signed when ant.jar is. Fixes the ant-export-full bug.

--- a/ant/build.xml
+++ b/ant/build.xml
@@ -210,6 +210,7 @@
              storepass="${webstart.storepass}">
       <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
       <fileset dir="${star.jar.dir}" includes="ant.jar"/>
+      <fileset dir="${star.jar.dir}" includes="optional.jar"/>
     </signjar>
 
   </target>
