--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -415,6 +415,9 @@
     <antcall target="unpack_jni_arch">
       <param name="unpack.arch" value="x86"/>
     </antcall>
+    <antcall target="unpack_jni_arch">
+      <param name="unpack.arch" value="ppc"/>
+    </antcall>
   </target>
 
   <!-- Architecture-specific JNI jar file unpacker -->
@@ -687,6 +690,19 @@
       <arg line="${mk.action}"/>
     </exec>
 
+    <exec dir="${build.jni}" executable="${build.jni}/mk" os="Mac OS X"
+          failonerror="yes">
+      <env key="SYSTEM" value="ppc_MacOSX"/>
+      <env key="JAVA_SYSTEM" value="ppc"/>
+      <env key="STARLINK" value="${stardev}"/>
+      <env key="ADDLIBS" value="-L${stardev.add}/lib"/>
+      <env key="ADDINCS" value="-I${stardev.add}/include"/>
+      <env key="JDK" value="${jdk}"/>
+      <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
+      <env key="TARGET_LIB" value="${build.lib.arch}"/>
+      <arg line="${mk.action}"/>
+    </exec>
+
     <exec dir="${build.jni}" executable="${build.jni}/mk" os="OSF1"
           failonerror="yes">
       <env key="SYSTEM" value="alpha_OSF1"/>
@@ -864,6 +880,11 @@
        <!-- SUN Solaris -->
        <resources os="SunOS" arch="sparc">
          <nativelib href="sparc/${name}_libs.jar"/>
+       </resources>
+
+       <!-- Mac OS X -->
+       <resources os="Mac OS X" arch="ppc">
+         <nativelib href="ppc/${name}_libs.jar"/>
        </resources>
 
        <component_desc/>
@@ -1097,6 +1118,7 @@
         <include name="**/*.zip"/>
         <include name="**/*.so"/>
         <include name="**/*.dll"/>
+        <include name="**/*.jnilib"/>
       </fileset>
     </loggedcopy>
 
