This commit was manufactured by cvs2svn to create tag 'Starlink_ANT_1_5_2'.

--- a/ant/src/main/org/apache/tools/ant/taskdefs/defaults.properties
+++ b/ant/src/main/org/apache/tools/ant/taskdefs/defaults.properties
@@ -177,3 +177,15 @@ copydir=org.apache.tools.ant.taskdefs.Copydir
 copyfile=org.apache.tools.ant.taskdefs.Copyfile
 deltree=org.apache.tools.ant.taskdefs.Deltree
 rename=org.apache.tools.ant.taskdefs.Rename
+
+# starlink extensions
+listdelete=uk.ac.starlink.ant.tasks.ListDelete
+loggedcopy=uk.ac.starlink.ant.tasks.LoggedCopy
+extdirproperty=uk.ac.starlink.ant.tasks.ExtdirProperty
+
+# roxes ant tasks
+sfx=com.roxes.tools.ant.SFXTask
+jstub=com.roxes.tools.ant.JStubTask
+jnlp=com.roxes.tools.ant.JNLPTask
+preferences=com.roxes.tools.ant.PreferencesTask
+
