--- a/topcat/.properties
+++ b/topcat/.properties
@@ -1,2 +1,2 @@
-jar.class.path=plot.jar jel_g.jar ../util/util.jar ../help/jhall.jar \
+jar.class.path=jel_g.jar ../util/util.jar ../help/jhall.jar \
 ../table/table.jar ../mirage/mirage.jar ../treeview/treeview.jar
