Added GIF exports from the plot window.  This uses a new third party library from ACME (www.acme.com).

--- a/topcat/.properties
+++ b/topcat/.properties
@@ -1,3 +1,3 @@
-jar.class.path=epsgraphics_classes.jar jel_g.jar \
+jar.class.path=epsgraphics_classes.jar acme_encoding.jar jel_g.jar \
 ../util/util.jar ../help/jhall.jar \
 ../table/table.jar ../mirage/mirage.jar ../treeview/treeview.jar
