--- a/topcat/.properties
+++ b/topcat/.properties
@@ -1,3 +1,4 @@
 jar.class.path=epsgraphics_classes.jar acme_encoding.jar jel_g.jar \
-../util/util.jar ../help/jhall.jar \
-../table/table.jar ../mirage/mirage.jar ../treeview/treeview.jar
+ ../util/util.jar ../pal/pal.jar ../table/table.jar \
+ ../mirage/mirage.jar ../treeview/treeview.jar \
+ ../help/jhall.jar
