Updated for AST V3.3.

--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -87,7 +87,7 @@
    !   not installed (is this sensible behaviour?) -->
   <property name="Name" value="JNIAST"/>
   <property name="name" value="jniast"/>
-  <property name="version" value="3.2-8"/>
+  <property name="version" value="3.3"/>
 
   <!-- The Java package name -->
   <property name="package.name" value="uk.ac.starlink.ast"/>
